fix: 全面修复技能集评估发现的问题（P0-P3）
P0 闭环断点修复:
- refactor-handoff schema 统一至 Fix Handoff 格式，补齐 target_lines/fix_type/fix_priority/code_fingerprint/anchor_pattern/ast_node_signature 七个统一字段
- 对齐 smell_catalog 字段名与 report-schema 一致
- 修正 refactorer SKILL.md 散文与 handoff 示例

P1 Schema 一致性与文档修复:
- architect: 统一 residual_risk 枚举、threat_id/test_case_id pattern、foreign_keys 结构化定义、\ 命名
- designer: design-handoff 补 conclusion/scope/developer_instructions，修正 SKILL.md 示例，新增 architect Trigger Resolution
- orchestrator: 修正 nine→ten 技能计数，新增 Test Gate 真值表，max_rounds 可配置
- architect produces_for 补 tester/code-reviewer，docgen produces_for 补 user/orchestrator
- 修正 uml-generation.md 路径与 architect-report.md 命名

P2 覆盖度提升:
- EVALUATE 扩充: reviewer TC-15/16/17(维度7/9/10)、developer TC-17/18(handoff消费)、refactorer TC-18(Fix Consumption兼容)
- 参考文档扩充: tester performance(JMH/GC/FX线程)、accessibility(WCAG映射/屏幕阅读器)、runner test-verification(JaCoCo/TestFX/数据库)、reviewer css(Looked-up Colors/SelectBinding)
- runner verification-report.md 补 Static Analysis 行
- deployer 新增 production_feedback 属性建立生产反馈回路，consumes_from 补 runner

P3 模板微调:
- pom.xml JaCoCo 段缩进统一为12空格
- UserViewModel.java 移除 System.out.println
- 新增 developer fix-summary.md 报告模板
- requirements report-schema \ 升级至 2020-12 并补 \

另含此前完成的 Task 6-9 交付物（数据库设计、威胁建模、分发渠道、回滚策略、视觉回归测试等）及技能集全面评估报告